no scroll, overflow hidden fix

--- a/css/js-portfolio-pj.scss
+++ b/css/js-portfolio-pj.scss
@@ -14,7 +14,7 @@ $darker-danger: rgb(55, 13, 17);
 //$darker-info: rgb(13, 202, 240);
 $darker-info: rgb(3, 51, 60);
 
-html {
+html, body {
     overflow: hidden;
 }
 
